Refactor TKUSP and OptimizedDataStructures for improved utility calculations; replace last() with size() for better clarity and performance, and optimize distinct item ID handling in sequences.